<resources>
    <string name="app_name" translatable="false">ClassroomComunnity</string>
    <string name="ident" translatable="false">Username</string>
    <string name="mdp" translatable="false">Password</string>
    <string name="boutonValid" translatable="false">Connect</string>
    <string name="welcome_home">Welcome to QuizAcademy</string>
    <string name="wifi">Wifi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="infrarouge">Infrarouge</string>
    <string name="gsm">Gsm</string>
    <string name="question">What technology can connect to a wireless network?</string>
    <string name="nom1">Ahmed CHAOU</string>
    <string name="nom2">Kevin.D</string>
    <string name="score2">0</string>
    <string name="score1">0</string>
    <string name="friend">Friends</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Setting">Settings</string>
    <string name="about">About</string>
    <string name="logout">Sign out</string>
    <string name="home">Home</string>
    <string name="scan_code">QR code Scan</string>
    <string name="wait_friend">Please wait, your friends are coming. . .</string>
    <string name="wait_request">Please wait, your request are submit. . .</string>
    <string name="wait_answer_request">Please wait, your friend will answer you. . .</string>

    <string name="you_lose">You Lose :,( </string>
    <string name="you_win">You Win :) </string>
    <string name="egality">Perfect Egality !</string>

</resources>
