<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_friend"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/friend"/>

        <item
            android:id="@+id/nav_present"
            android:icon="@drawable/ic_person_pin_circle_black_24dp"
            android:title="Présence"/>


        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/Setting"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/about"/>

    </group>


</menu>