<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="50dp"
    tools:context="iut.paci.classroomcomunnity.activity.LoginActivity">


        <ImageView
            android:id="@+id/imageViewCadenas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            app:srcCompat="@drawable/cadenas" />

        <TextView
            android:id="@+id/textViewIdent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ident" />

        <EditText
            android:id="@+id/editTextIdent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mdp"/>

        <EditText
            android:id="@+id/editTextPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"/>

        <Button
            android:id="@+id/buttonValider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boutonValid"
            android:background="@color/colorAccent"/>


</LinearLayout>
